applications/media-server/manifests/jellyfin-ingress-tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-tailscale
  namespace: media
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - jellyfin
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  number: 8096
